syntax = "proto3";

import "google/protobuf/empty.proto";
package device_management;

service DeviceManager {
    rpc UpsertDeviceStatus (DeviceDetails) returns (UpsertDeviceResponse);
    rpc GetDevice (GetDeviceRequest) returns (DeviceDetails);
    rpc UpsertDeviceStatuses (stream DeviceDetails) returns (UpsertDeviceResponse);
    rpc GetAllStatuses (google.protobuf.Empty) returns (stream DeviceDetails);
    rpc UpdateAndConfirmBatch (stream DeviceDetails) returns (stream DeviceDetails);
}

message DeviceDetails {
    int32 device_id = 1;
    string name = 2;
    string description = 3;
    DeviceStatus status = 4; 
}

message GetDeviceRequest {
    int32 device_id = 1;
}

message UpsertDeviceResponse {
    bool success = 1;
}

enum DeviceStatus {
    OFFLINE = 0;
    ONLINE = 1;
    BUSY = 2;
    ERRORED = 3;
}